prevent users from distorting statistics by accidentally submitting twice

--- a/style.css
+++ b/style.css
@@ -103,6 +103,51 @@ footer {
     padding-bottom: 2em;
 }
 
+#cover{
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:5;
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,0.6);
+    display:none;
+}
+
+#overlay {
+    position:fixed;
+    width: 35em;
+    height: 20em;
+    top: 50%;
+    left: 50%;
+    margin-bottom: -50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    border: 5px solid #cccccc;
+    border-radius:10px;
+    padding: 2.5em;
+    background-color: white;
+    text-align: center;
+    display: none;
+}
+
+#overlay .cancel {
+    display:block;
+    position:absolute;
+    top:3px;
+    right:10px;
+    color:black;
+    font-size:30px;
+    text-decoration:none;
+    font-weight:bold;
+    cursor: pointer;
+}
+
+#overlay .btn {
+    margin: 0.5em;
+}
+
 @media screen and (max-width:480px) {
     h1.main-title {
         font-size:350%;
